--- a/embeddingOriginalWork.html
+++ b/embeddingOriginalWork.html
@@ -12,8 +12,7 @@
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/XLV2oTy8oLQ?start=180" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 	<object width="400" height="400" data="Paleoecology of North American Grasslands.pdf"></object>
 	<video width="320" height="240" controls>
-  	<source src="How the Sodium Potassium Pump Works - YouTube.mp4" type="How the Sodium Potassium Pump Works - YouTube/mp4">
-	<source src="How the Sodium Potassium Pump Works - YouTube.ogg" type="How the Sodium Potassium Pump Works - YouTube/ogg">
+  	<source src="How the Sodium Potassium Pump Works - YouTube.mp4" type="How the Sodium Potassium Pump Works - YouTube/mp4"></source>
 	</video>
 	<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d441108.1646576625!2d119.89169844080871!3d30.26109228936536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x344bb629439aaa99%3A0xa7bfd183824de83a!2sHangzhou%2C+Zhejiang%2C+China!5e0!3m2!1sen!2sus!4v1538705976103" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 	</body>
